# segno

./: .gitignore  LICENSE.md  README.md  segno.cabal
examples/: fourCol.txt  scales.txt
src/: Main.hs
src/Segno/: Music.hs
