cabal-version:       2.4
-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                segno
version:             0.1.0.0
synopsis:            A Music Notation Programming language that compiles to MIDI written in Haskell.
description:         Music Notation Language in Haskell.
bug-reports:         github.com/IamRifki/segno/issues
license:             MIT
license-file:        LICENSE.md
author:              Rifki Kusmana
maintainer:          iamrifki0@gmail.com
copyright:           ∞
category:            Sound
-- extra-source-files:

source-repository head
  type:     git
  location: https://github.com/iamrifki/segno.git

library
  exposed-modules:   Segno.Music
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0,
                       HCodecs,
                       parsec>=3.1.14.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable segno
  main-is:             Main.hs
  other-modules:       Segno.Music
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0,
                       HCodecs,
                       split,
                       listsafe,
                       parsec>=3.1.14.0
  hs-source-dirs:      src
  default-language:    Haskell2010
